--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -30,6 +30,7 @@
     <!-- pure.css -->
     <link rel="stylesheet" href="https://unpkg.com/purecss@2.0.3/build/pure-min.css"
         integrity="sha384-CCTZv2q9I9m3UOxRLaJneXrrqKwUNOzZ6NGEUMwHtShDJ+nCoiXJCAgi05KfkLGY" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/base-min.css">
     <!-- pure.css Viewport Meta 元素 -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -46,9 +47,9 @@
 
 <body>
     <header>
-        <a href="{% url 'blog:index_unlog' %}">
+        <!-- <a href="{% url 'blog:index_unlog' %}">
             返回首页
-        </a>
+        </a> -->
     </header>
 
     <nav>
